Fixed spacing of patient information under patient name. Left aligned doctor name under flux notes logo

--- a/src/panels/PatientControlPanel.css
+++ b/src/panels/PatientControlPanel.css
@@ -19,7 +19,8 @@
     vertical-align: 0.5em;
 }
 .patient-control-panel .login {
-    margin-left:42px;
+    margin-left: 0.4rem;
+
 }
 
 .vertical-divider {
