--- a/src/summary/SummaryHeader.css
+++ b/src/summary/SummaryHeader.css
@@ -12,19 +12,17 @@ h2, h3 {
     color: #999;
 }
 
+.patient-item {
+    margin-left: 1px !important;
+}
+
+
 .avatar {
     display:inline-block;
 }
 
-.name-and-mrn {
-    display:inline-block;
-}
-
 .patient-info {
-    float: left;
-    margin-left: 10px;
-    min-width: 70%;
-    max-width: 70%;
+    display:inline-block;
 }
 
 .item {
